[FIX] Icon alignment in progress column
- Adjusted position of zkb icon in active campaign
- Aligned trend icon with upcoming campaigns
- Updated top position of trend icons for better visual alignment

--- a/sovtimer/static/sovtimer/css/aa-sov-timer.css
+++ b/sovtimer/static/sovtimer/css/aa-sov-timer.css
@@ -37,6 +37,11 @@
         margin-left: 1rem;
     }
 
+    .aa-sov-timer-zkb-icon img {
+        position: relative;
+        top: -2px;
+    }
+
     .aa-sovtimer-active-campaign {
         border-left: 1px solid var(--bs-danger);
         border-right: 1px solid var(--bs-danger);
@@ -61,7 +66,7 @@
         left: 0.5rem;
         margin-right: 1rem;
         position: relative;
-        top: 0.75rem;
+        top: 0.35rem;
     }
 
     .aa-sovtimer-trend-up {
